Fix roles translation and layout shift for Chrome translation bar

--- a/src/styles/layout/_page.scss
+++ b/src/styles/layout/_page.scss
@@ -10,7 +10,8 @@ body {
     background-color: $loader-background;
 
     @include media-breakpoint-up($max-breakpoint-for-tabbed-interface) {
-        position: fixed!important;
+        position: relative!important;
+        height: 100vh;
         overflow-y: hidden!important;
     }
 }
